new mcp tools for notes, urls, snippets bookmarks